--- a/single.html
+++ b/single.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" media="all">
   <link rel="stylesheet" href="common/css/base.css" media="all">
   <link rel="stylesheet" href="common/css/single.css" media="all">
+  <link rel="stylesheet" href="style.css" media="all">
   <script src="node_modules/vue/dist/vue.js"></script>
   <script src="common/js/common.js"></script>
   <!-- [if lt IE 9]>
@@ -170,6 +171,20 @@
           </ul>
         </div>
         <!-- .area-recommend -->
+
+        <!-- 簡易プロフィール -->
+        <section class="area-smart-profile">
+          <div class="box-smart-profile-icon">
+            <img src="common/img/icon/icon-profile-large.jpg" class="img-profile-petit" alt="プロフィール画像">
+          </div><!-- .ico-profile-petit -->
+          <div class="box-smart-profile-text">
+            <div class="box-smart-profile-name">コボリアキラ / kobori akira</div>
+            <p>ラッパー、トラックメイカー、DJ。<br/>
+            1989年1月6日の「最後の昭和生まれ、最初の平成生まれ」。</p>
+            <p>[<a href="#">プロフィール</a>], [<a href="#">ディスコグラフィ</a>]</p>
+          </div><!-- .box-smart-profile -->
+        </section><!-- .area-smart-profile -->
+        <div style="clear:both"></div>
 
         <div class="area-article-comment">
           <h2 class="ttl-article-comments">コメントを見る（4件）</h2><!-- .ttl-comments -->
