Add share-sns-btn component

--- a/single.html
+++ b/single.html
@@ -74,6 +74,23 @@
         </div>
         <!-- .area-article-ttl -->
 
+        <div class="area-share-sns">
+          <div class="box-share-btn">
+            <a class="link-btn-cmn link-btn-share-sns link-btn-twitter" href="https://twitter.com/intent/tweet?text=title&url=http://sample">
+              <i class="fa fa-twitter fa-1x" aria-hidden="true"></i> Tweet
+            </a>
+          </div>
+          <div class="box-share-btn">
+            <a class="link-btn-cmn link-btn-share-sns link-btn-facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://test.jp/">
+              <i class="fa fa-thumbs-up" aria-hidden="true"></i> Facebook
+            </a>
+          </div>
+          <div class="box-share-btn box-share-btn-hatena">
+            <a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-counter" data-hatena-bookmark-width="60" data-hatena-bookmark-height="23" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+          </div>
+          <div style="clear:both"></div>
+        </div>
+
         <div class="mod-article-lead-cmn box-article-lead">
           DJ、とくにJ-POP専門のDJにとって、「選曲」は最も重要な要素のひとつです。もし、あなたが初めてDJブースに立ち、「何か流せ」と言われたらどうするでしょう。あなたはとりあえず「自分の好きな曲を、好きな順にかける」ことにしました。これでお客が盛り上がれば、フロアもあなたも皆が幸せです。実際、これで盛り上がる現場もたくさんありますが、２，３度DJをした方であれば、この方法が通用しないフロアがあることもご存知でしょう。では、どのように選曲を行えばよいのでしょうか。
         </div>
