Add css of iframe

--- a/single.html
+++ b/single.html
@@ -13,9 +13,7 @@
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" media="all">
   <link rel="stylesheet" href="common/css/base.css" media="all">
   <link rel="stylesheet" href="common/css/single.css" media="all">
-  <link rel="stylesheet" href="style.css" media="all">
-  <script src="node_modules/vue/dist/vue.js"></script>
-  <script src="common/js/common.js"></script>
+  <link rel="stylesheet" href="common/css/style.css" media="all">
   <!-- [if lt IE 9]>
     <script src="node_module/html5shiv/dist/html5shiv.min.js"></script>
   <![endif]-->
@@ -144,6 +142,10 @@
           <!-- .ttl-section -->
           <p>DJはお客に「ダンス」させることが第一の目的であり、まずはリズムを崩さないことが特に重要です。</p>
           <p>これは選曲でも同じです。いま流れている曲のドラムパターンやハネ感に似ている曲を選んでいけばDJっぽくなるというか、少なくとも現在のiTunesのランダムプレイには勝てます（笑）。</p>
+
+          <div class="iframe">
+            <iframe src="https://www.youtube.com/embed/dOD9f7wM8W0" frameborder="0" allowfullscreen></iframe>
+          </div>
 
           <div class="area-article-meta-info">
             <span class="posted-date">
@@ -277,6 +279,8 @@
       <span>Copyright koboriakira</span>
     </div><!-- .fotter-copyright -->
   </footer>
+  <script src="node_modules/vue/dist/vue.js"></script>
+  <script src="common/js/common.js"></script>
 </body>
 
 </html>
